--- a/src/CalDAVNet/CalDAVNet.csproj
+++ b/src/CalDAVNet/CalDAVNet.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
+        <TargetFrameworks>net7.0</TargetFrameworks>
         <AssemblyName>CalDAVNet</AssemblyName>
         <RootNamespace>CalDAVNet</RootNamespace>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
