--- a/src/CalDAVNet.Examples/CalDAVNet.Examples.csproj
+++ b/src/CalDAVNet.Examples/CalDAVNet.Examples.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <OutputType>Exe</OutputType>
         <TargetFramework>net7.0</TargetFramework>
         <LangVersion>latest</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
