--- a/src/CalDAVNet/CalDAVNet.csproj
+++ b/src/CalDAVNet/CalDAVNet.csproj
@@ -16,7 +16,7 @@
         <RepositoryUrl>https://github.com/SeppPenner/CalDAVNet</RepositoryUrl>
         <PackageIcon>Icon.png</PackageIcon>
         <RepositoryType>Github</RepositoryType>
-        <PackageReleaseNotes>Version 1.0.1.0 (2023-12-07): Updated NuGet packages, added support for Net8.0.</PackageReleaseNotes>
+        <PackageReleaseNotes>Version 1.0.2.0 (2024-05-16): Removed support for Net7.0.</PackageReleaseNotes>
         <PackageLicenseFile>License.txt</PackageLicenseFile>
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
         <EmbedUntrackedSources>true</EmbedUntrackedSources>
